name:           left4deadrl
version:        0.0.2
category:       Math
synopsis:       left4dead-inspired roguelike
description:    a zombie game written with hscharm
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
    type:     git
    location: https://github.com/mcandre/left4deadrl.git

executable left4deadrl
    build-depends:
        base           >= 4.3.1.0 && < 5,
        random         >= 1.1 && < 2,
        random-shuffle >= 0.0.4 && < 0.0.5,
        hscharm        >= 0.0.2 && < 0.0.3

    ghc-options: -Wall -fwarn-tabs
    main-is: Left4DeadRL.hs
    hs-source-dirs: src

test-suite reference
    build-depends:
        base                        >= 4.3.1.0 && < 5,
        hlint                       >= 2.1.10 && < 3,
        shake                       >= 0.16.4 && < 0.17,
        random                      >= 1.1 && < 2,
        random-shuffle              >= 0.0.4 && < 0.0.5,
        hscharm                     >= 0.0.2 && < 0.0.3

    ghc-options:        -Wall -fwarn-tabs
    hs-source-dirs:     src
    main-is:            Left4DeadRL.hs
    type:               exitcode-stdio-1.0
